[tool.poetry]
name = "account"
version = "0.1.0"
description = ""
authors = ["Kim Minki <wer153@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
django-ninja = "^1.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
